Stackless-Python News
+++++++++++++++++++++

This file documents user visible changes to the Stackless extension of C-Python.
For other changes see Misc/NEWS.

What's New in Stackless 3.X.X?
==============================

*Release date: 20XX-XX-XX*


What's New in Stackless 3.6.7 and 3.6.8?
========================================

*Release date: 2019-01-20*  (3.6.8)
*Release date: 2019-01-20*  (3.6.7)

- https://github.com/stackless-dev/stackless/issues/190
  Silently ignore attempts to close a running generator, coroutine or
  asynchronous generator. This avoids spurious error messages, if such an
  object is deallocated as part of a paused, restorable tasklet.

- https://github.com/stackless-dev/stackless/issues/206
  Fix the error handling of the Python implementation of function-object
  pickling.

- https://github.com/stackless-dev/stackless/issues/204
  Fix bpo-24596 for Stackless too.

- https://github.com/stackless-dev/stackless/issues/200
  Fix a bug in the C-API functions PyTasklet_Run_nr() and
  PyTasklet_Switch_nr(). Under exotic conditions the functions could
  cause undefined behavior.

- https://github.com/stackless-dev/stackless/issues/193
  Fix the macros PyTasklet_CheckExact(op) and PyChannel_CheckExact(op).
  Previously they contained a reference to a non existing variable.

- https://github.com/stackless-dev/stackless/issues/182
  Fix "make teststackless" for out of tree builds


What's New in Stackless 3.6.5 and 3.6.6?
========================================

*Release date: 2018-09-12*  (3.6.6)
*Release date: 2018-09-11*  (3.6.5)

- https://github.com/stackless-dev/stackless/issues/168
  Make Stackless compatible with old Cython extension modules compiled
  for regular C-Python.

- https://github.com/stackless-dev/stackless/issues/166
  Fix C-API functions PyEval_EvalFrameEx() and PyEval_EvalFrame().
  They are now compatible with C-Python.

- https://github.com/stackless-dev/stackless/issues/167